--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <button onclick="addCommand()">Add Command</button>
     <div id="commands-list"></div>
     <button onclick="createWebsite()">Create Webpage</button>
+    <button onclick="createServer()">Create Server</button>
     <script type="module" src="main.js"></script>
 </body>
 </html>
